--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <fieldset>
-                                        <label for="return">Return date:</label>
+                                        <label for="return">Arrival date:</label>
                                         <input name="arrival_time" type="date" class="form-control date" id="return"  value="" placeholder="Select date..." onchange='this.form.()'>
                                     </fieldset>
                                 </div>
