--- a/templates/insert_airplane.html
+++ b/templates/insert_airplane.html
@@ -187,6 +187,12 @@
     {{ data['msg'] }}
     <p>
     <a href="/home/">Back Home</a>
+    {% if error %}
+    <div class="error">
+    <p>{{ error }}</p>
+    {% endif %}
+</div>
+
 </form>
 
 
